multi-app/manifests/hdfz-app/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hdfz-backend
  # namespace: hdfz-app
  labels:
    app: hdfz
    type: backend
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hdfz
      type: backend
      version: v1
  template:
    metadata:
      labels:
        app: hdfz
        type: backend
        version: v1
    spec:
      containers:
      - name: hdfz
        image: ghcr.io/jameelkaisar/hdfz-app/backend:v1
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
        ports:
        - containerPort: 5000
          protocol: TCP
