multi-app/manifests/hdfz-app/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hdfz-frontend
  # namespace: hdfz-app
  labels:
    app: hdfz
    type: frontend
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hdfz
      type: frontend
      version: v1
  template:
    metadata:
      labels:
        app: hdfz
        type: frontend
        version: v1
    spec:
      containers:
      - name: hdfz
        image: ghcr.io/jameelkaisar/hdfz-app/frontend:v1
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
        ports:
        - containerPort: 3000
          protocol: TCP
