multi-app/manifests/hdfz-app/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: hdfz-backend
  namespace: hdfz-app
spec:
  type: ClusterIP
  selector:
    app: hdfz
    type: backend
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 5000
