multi-app/manifests/hdfz-app/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: hdfz-frontend
  namespace: hdfz-app
spec:
  type: ClusterIP
  selector:
    app: hdfz
    type: frontend
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
