multi-app/manifests/hdfz-app/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hdfz
  namespace: hdfz-app
spec:
  gateways:
  - hdfz-gateway
  hosts:
  - "*"
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: hdfz-backend
        port:
          number: 80
      headers:
        response:
          add:
            version: v1
  - route:
    - destination:
        host: hdfz-frontend
        port:
          number: 80
      headers:
        response:
          add:
            version: reactjs
